# diploma

./: .dockerignore  .gitignore  CONTEXT.md  README.md  docker-compose.yml  taskfile.yml
.sisyphus/run-continuation/: ses_1d78c0954ffe5TnLCtLCtmXsZS.json
docs/: README.md
docs/architecture/: README.md  component.puml  container.puml  context.puml  deployment.puml
docs/architecture/cluster/: deployment.txt
docs/architecture/onenode/: README.md  component.puml  context.puml  deployment.puml  sequence-redis-ingest.puml
docs/decisions/: 0001-three-databases.md  0002-rabbitmq-and-kafka.md  0003-single-host-docker-compose.md  0004-minio-for-model-artifacts.md  0005-real-estate-as-module.md  0006-tech-stack.md  0007-configs-in-postgres.md  0008-postgres-core-ops-schemas.md  0009-redis-auxiliary-layer.md  README.md
docs/design/: README.md  acceptance.md  dashboards.md  scope.md
docs/design/api/: README.md  openapi.yaml
docs/design/databases/: README.md  clickhouse.md  mongo.md  postgres.md  redis.md
docs/services/: README.md
infra/minio/: init.sh
infra/rabbitmq/: Dockerfile  definitions.json  rabbitmq.conf
infra/redis/: redis.conf
infra/seed/: backfill_history.py  backfill_mongo_objects.py  moscow_districts_centroids.json
model/: .dockerignore  ARTICLE_CATBOOST_PARAMS.md  ARTICLE_CROSS_VALIDATION.md  ARTICLE_LEGACY_LIMITATIONS_SENSITIVITY.md  ARTICLE_LIMITATIONS_SENSITIVITY.md  ARTICLE_RANKING_COMPARISON.md  ARTICLE_RANKING_METRICS.md  ARTICLE_RUSSIA2021_MODEL_ANALYSIS.md  ARTICLE_SYNTHETIC_RANKING_TABLE.md  Dockerfile  README.md  api.py  data_loading.py  docker-compose.yml  evaluate.py  main.py  preprocessing.py  requirements.txt  train.py  utils.py
model/alembic/: env.py
model/analytics/: README.md  __init__.py  bootstrap_control_sample.py  compare_valuation_approaches.py  config.py  control_sample.py  generate_report.py  requirements.txt  valuation_approaches.py
model/apps/api/: Dockerfile  (+3 more)
model/docs/: README.md
model/ml/: README_test.md  test_model.py  test_object.json
model/scripts/: evaluate_catboost_cv.py  evaluate_catboost_hyperparameter_sensitivity.py  evaluate_feature_ablation.py  evaluate_legacy_feature_ablation.py  evaluate_legacy_hyperparameter_sensitivity.py  evaluate_legacy_limitations_impact.py  evaluate_legacy_model.py  evaluate_limitations_impact.py  evaluate_ranking_metrics.py  evaluate_russia2021_catboost_cv.py  evaluate_russia2021_feature_ablation.py  evaluate_russia2021_hyperparameter_sensitivity.py  evaluate_russia2021_limitations_impact.py  evaluate_russia2021_method_comparison.py  evaluate_russia2021_model.py  evaluate_synthetic_ranking_benchmark.py  inspect_legacy_model.py  inspect_russia2021_model.py  russia2021_analysis_common.py
model/tests/: test_analytics_service_contract.py  test_geocode_service.py  test_proxy_valuation_contract.py  test_rub_pipeline_contract.py  test_russia2021_control_pipeline.py  test_russia2021_training_pipeline.py
observability/loki/: loki-config.yml
observability/prometheus/: prometheus.yml
observability/promtail/: promtail-config.yml
observability/tempo/: tempo-config.yml
services/_shared/contracts/: README.md  pyproject.toml
services/_shared/contracts/aisi_contracts/: __init__.py  envelope.py  messages.py  metrics.py  realestate.py
services/_shared/observability/: pyproject.toml
services/_shared/observability/src/aisi_obs/: __init__.py  logging.py  metrics.py  tracing.py
services/_shared/redis_lib/: README.md  pyproject.toml
services/_shared/redis_lib/aisi_redis/: __init__.py  client.py  dedup.py  ratelimit.py
services/_shared/redis_lib/tests/: test_redis_lib.py
services/frontend/: .dockerignore  Dockerfile  README.md  eslint.config.js  index.html  nginx.conf  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.app.json  tsconfig.app.tsbuildinfo  vite.config.ts
services/metrics/: Dockerfile  README.md  pyproject.toml
services/metrics/src/metrics/: __init__.py  cache.py  clickhouse.py  config.py  consumer.py  main.py
services/metrics/src/metrics/api/: __init__.py  _common.py  listings.py  model_quality.py  objects.py  overview.py  prices.py  sentiment.py  topics.py
services/metrics/tests/: test_smoke.py
services/nlp-parser/: Dockerfile  README.md  pyproject.toml
services/nlp-parser/src/nlp_parser/: config.py  kafka_publisher.py  main.py  pubsub.py  worker.py
services/nlp-parser/src/nlp_parser/api/: auth.py  favorites.py  jobs.py  messages.py  sources.py  subscriptions.py  trends.py
services/nlp-parser/src/nlp_parser/auth/: jwt_tools.py  passwords.py
services/nlp-parser/src/nlp_parser/llm/: anthropic_client.py  trends_job.py
services/nlp-parser/src/nlp_parser/nlp/: content_filter.py  stub.py
services/nlp-parser/src/nlp_parser/parsing/: html.py  news_stub.py  registry.py  rss.py  telegram.py  telegram_stub.py
services/nlp-parser/src/nlp_parser/persistence/: mongo.py  postgres.py
services/nlp-parser/src/nlp_parser/scripts/: backfill_unwanted.py  sanitize_trends.py  tg_login.py
services/nlp-parser/tests/: test_contracts.py  test_nlp_stub.py  test_pagination.py  test_parsing_html.py  test_parsing_registry.py  test_parsing_rss.py  test_parsing_stub.py  test_pubsub.py  test_smoke.py
services/realestate/: Dockerfile  README.md  pyproject.toml
services/realestate/src/realestate/: __init__.py  config.py  main.py  worker.py
services/realestate/src/realestate/api/: __init__.py  model_runs.py  objects.py
services/realestate/src/realestate/kafka/: __init__.py  publisher.py
services/realestate/src/realestate/ml/: __init__.py  loader.py  predict.py
services/realestate/src/realestate/parsing/: __init__.py  stub.py
services/realestate/src/realestate/persistence/: __init__.py  mongo.py  postgres.py
services/realestate/tests/: test_contracts_parse.py  test_pagination.py  test_parsing_stub.py  test_smoke.py
services/scheduler/: Dockerfile  pyproject.toml
services/scheduler/src/scheduler/: config.py  db.py  loop.py  main.py  publisher.py
tests/: README.md  pytest.ini
tests/api/: test_auth_and_basic.py  test_dashboards.py  test_objects.py
(+183 files in other folders)
