[project]
name = "metrics"
version = "0.1.0"
description = "AIS metrics module: Kafka → ClickHouse consumer + FastAPI dashboards API."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "aiokafka>=0.10",
    "clickhouse-connect>=0.7",
    "aiohttp>=3.9",
    "orjson>=3.10",
    "aisi-contracts",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/metrics"]

[tool.uv.sources]
aisi-contracts = { path = "../_shared/contracts", editable = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
