[project]
name = "nlp-parser"
version = "0.1.0"
description = "AIS nlp-parser: REST API + RabbitMQ worker для парсинга TG/новостей и NLP-аннотации."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "motor>=3.4",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "aio-pika>=9.4",
    "aiokafka>=0.10",
    "pyjwt>=2.8",
    "bcrypt>=4.1",
    "sse-starlette>=2.1",
    "httpx>=0.27",
    "orjson>=3.10",
    "email-validator>=2.1",
    "feedparser>=6.0",
    "trafilatura>=1.12",
    "beautifulsoup4>=4.12",
    "lxml>=5.2",
    "telethon>=1.36",
    "aisi-contracts",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nlp_parser"]

[tool.uv.sources]
aisi-contracts = { path = "../_shared/contracts", editable = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
