[project]
name = "realestate"
version = "0.1.0"
description = "AIS realestate module: FastAPI service + RabbitMQ worker для оценки недвижимости."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "motor>=3.4",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "aio-pika>=9.4",
    "aiokafka>=0.10",
    "minio>=7.2",
    "catboost>=1.2",
    "joblib>=1.3",
    "numpy>=1.26",
    "pandas>=2.1",
    "scikit-learn>=1.3",
    "httpx>=0.27",
    "orjson>=3.10",
    "aisi-contracts",
    "aisi-redis",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/realestate"]

[tool.uv.sources]
aisi-contracts = { path = "../_shared/contracts", editable = true }
aisi-redis = { path = "../_shared/redis_lib", editable = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
