[project]
name = "scheduler"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "sqlalchemy[asyncio]>=2.0",
  "asyncpg>=0.29",
  "aio-pika>=9.4",
  "orjson>=3.10",
  "aisi-contracts",
  "aisi-obs",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scheduler"]

[tool.uv.sources]
aisi-contracts = { path = "../_shared/contracts", editable = true }
aisi-obs = { path = "../_shared/observability", editable = true }
