[project]
name = "aisi-contracts"
version = "0.1.0"
description = "Общие Pydantic-контракты сообщений между сервисами АИС (RabbitMQ + Kafka)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aisi_contracts"]
