[project]
name = "aisi-obs"
version = "0.1.0"
description = "Shared observability: structured logging + Prometheus + OpenTelemetry for AIS FastAPI services"
requires-python = ">=3.11"
dependencies = [
    "prometheus-fastapi-instrumentator>=7.0",
    "opentelemetry-sdk>=1.25",
    "opentelemetry-instrumentation-fastapi>=0.46b0",
    "opentelemetry-instrumentation-httpx>=0.46b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.46b0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.25",
    "python-json-logger>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aisi_obs"]
