[project]
name = "aisi-redis"
version = "0.1.0"
description = "Общий Redis-клиент АИС: dedup (SET NX EX) и outbound rate-limit (INCR/EXPIRE). См. ADR-0009."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "redis>=5.0",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aisi_redis"]
