[project]
name = "aisi-redis"
version = "0.1.0"
description = "Общий Redis-клиент АИС: dedup (SET NX EX) и outbound rate-limit (INCR/EXPIRE). См. ADR-0009."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "redis>=5.0",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aisi_redis"]
